--- a/source/_patterns/20-molecules/listmodule/listmodule.scss
+++ b/source/_patterns/20-molecules/listmodule/listmodule.scss
@@ -8,9 +8,10 @@
 .listmodule__title {
   font:normal 500 22px/28px $font-medium;
   letter-spacing:.2px;
-  color:$color-text-default;
-  margin:0 0 16px;
-  padding:0 24px;
+  color: $color-text-default;
+  margin: 0 0 16px;
+  @include article-text-padding;
+
 }
 .listmodule__title--listicle {
   @include tablet-up {
